--- a/questionnaire.html
+++ b/questionnaire.html
@@ -3,6 +3,7 @@
     <head>
         <title>Какой язык программирования выбрать новичку в 2021 году</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/questionnaire.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel = "icon" href ="image/icon.png">
