--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <section class="user">
+        <form action="User.php" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
@@ -111,7 +111,7 @@
                 </div>
                 <div>
                     <b>Немного о себе</b>
-                    <textarea name="text" maxlength="255" required></textarea>
+                    <textarea name="massage" maxlength="255" required></textarea>
                 </div>
                 <div class="box">
                     <input type="checkbox" name="checkbox"> <b>Я студент</b>
@@ -126,6 +126,6 @@
                 </div>
             </div>
             <br>
-        </section>
+        </form>
     </body>
 </html>
