--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <form action="User.php" method="POST" class="user">
+        <form action="User.php" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
