--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <form action="User.php" method="post" class="user">
+        <form action="https://formspree.io/f/xvolgkaw" enctype="multipart/form-data" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
@@ -87,7 +87,7 @@
                 </div>
                 <div>
                     <b>Номер телефона</b>
-                    <input type="number" name="numberphone" placeholder="+71234567890" required>
+                    <input type="tel" pattern="[+]{1}[7]{1}[0-9]{10}" name="numberphone" required>
                 </div>
                 <div>
                     <b>Ключевое слово</b>
