--- a/questionnaire.html
+++ b/questionnaire.html
@@ -107,7 +107,7 @@
                 <div><hr></div>
                 <div class="file">
                     <b>Паспорт(.jpeg, .png)</b> 
-                    <input type="file" name="file" accept="image/jpeg, image/png" required>
+                   <!-- <input type="file" name="file" accept="image/jpeg, image/png" required>-->
                 </div>
                 <div>
                     <b>Немного о себе</b>
