--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <form action="https://formspree.io/f/xvolgkaw" enctype="multipart/form-data" method="post" class="user">
+        <form action="http://formspree.io/gorhayrapetyan2003@gmail.com" enctype="multipart/form-data" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
