--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <form action="http://formspree.io/gorhayrapetyan2003@gmail.com" enctype="multipart/form-data" method="post" class="user">
+        <form action="User.php" enctype="multipart/form-data" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
@@ -107,7 +107,7 @@
                 <div><hr></div>
                 <div class="file">
                     <b>Паспорт(.jpeg, .png)</b> 
-                   
+                    <input type="file" name="file" accept="image/jpeg, image/png" required>
                 </div>
                 <div>
                     <b>Немного о себе</b>
