--- a/questionnaire.html
+++ b/questionnaire.html
@@ -4,7 +4,6 @@
         <title>Какой язык программирования выбрать новичку в 2021 году</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="css/questionnaire.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel = "icon" href ="image/icon.png">
@@ -44,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <form enctype="multipart/form-data" method="post" class="user">
+        <form action="User.php" enctype="multipart/form-data" method="post" class="user">
             <div class="allelem">
                 <div>
                     <b>Имя</b>
