--- a/questionnaire.html
+++ b/questionnaire.html
@@ -1,4 +1,149 @@
 <!DOCTYPE html>
+<html lang="ru">
+
+    <head>
+        <title>Какой язык программирования выбрать новичку в 2021 году</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/questionnaire.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel = "icon" href ="image/icon.png">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src = "js/jquery-3.6.0.min.js"></script>
+        <script src="js/index.js" type="text/javascript"></script>
+    </head>
+    <body>
+        <header>
+            <div class = "content">
+                <div class = "LL">
+                    <div class = "logo">
+                        <a herf = "index.html"><img  src = "image/LW1.png" alt="LOGO" width="150px"></a>
+                    </div>
+                    <div class = "Nav">
+                    <ul>
+                        <li><a href="index.html">Статья</a></li>
+                        <li><a href="graphics.html">Графики</a></li>
+                        <li><a href="bookmark.html">Заметки</a></li>
+                        <li><a href="questionnaire.html">Анкета</a></li>
+                    </ul>
+                    </div>
+                    <button class = "_Nav">
+                        <hr>
+                        <hr>
+                        <hr>
+                    </button>
+                </div>
+                <div class = "__Nav">
+                    <ul>
+                        <li><a href="index.html">Статья</a></li>
+                        <li><a href="graphics.html">Графики</a></li>
+                        <li><a href="bookmark.html">Заметки</a></li>
+                        <li><a href="questionnaire.html">Анкета</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+    <div class="container">
+        <h2><b>Регистрация нового пользователя</b></h2>
+        <form action="form.html" method="post" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col">
+                    <label for="name" class="form-label">Имя</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Введите имя"
+                        minlength="1" maxlength="12" pattern="^(([a-zA-Z]+)|([а-яА-Я]+))$" required>
+                </div>
+                <div class="col">
+                    <label for="middleName" class="form-label">Отчество (необязательно)</label>
+                    <input type="text" class="form-control" name="middlename" id="middleName"
+                        placeholder="Введите отчество" maxlength="12" pattern="^(([a-zA-Z]+)|([а-яА-Я]+))$">
+                </div>
+                <div class="col">
+                    <label for="lastName" class="form-label">Фамилия</label>
+                    <input type="text" class="form-control" name="lastname" id="lastName" placeholder="Введите фамилию"
+                        minlength="1" maxlength="12" pattern="^(([a-zA-Z]+)|([а-яА-Я]+))$" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="example@mail.ru"
+                        required>
+                </div>
+                <div class="col">
+                    <label for="nickname" class="form-label">Никнейм</label>
+                    <input type="text" class="form-control" name="nickname" id="nickname" minlength="4" maxlength="12"
+                        placeholder="Введите никнейм" required>
+                </div>
+                <div class="col">
+                    <label for="password" class="form-label">Пароль</label>
+                    <input type="password" class="form-control" name="password" id="password" minlength="8"
+                        maxlength="12" placeholder="Введите пароль" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label class="form-label">Роль пользователя</label>
+                    <select name="role" class="form-select">
+                        <option value="admin" selected>Пользователь</option>
+                        <option value="user">Админ</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="reputation" class="form-label">Репутация пользователя</label>
+                    <input type="number" name="reputation" class="form-control" id="reputation" placeholder="от 1 до 10"
+                        min="1" max="10" required>
+                </div>
+                <div class="col">
+                    <label for="date" class="form-label">Дата смены пароля</label>
+                    <input type="date" name="date" class="form-control" id="date" required>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <label for="avatar" class="form-label">Аватар пользователя (*.png, *.jpeg)</label>
+                    <input type="file" name="avatar" class="form-control" id="avatar" accept="image/jpeg, image/png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="about" class="form-label">Подпись пользователя (Необязательно)</label>
+                    <textarea class="form-control" name="about" id="about" cols="30" rows="10"
+                        placeholder="Расскажите о себе..."></textarea>
+                </div>
+            </div>
+            <hr>
+            <input class="form-check-input" type="checkbox" value="" id="send">
+            <label for="send" class="form-label">Отправить логин и пароль на Email</label>
+            <hr>
+            <div class="row">
+                <div class="col">Подписаться на новостную рассылку?</div>
+                <div class="col">
+                    <input class="form-check-input" type="radio" name="news">
+                    <label class="form-check-label" for="news">
+                        да
+                    </label>
+                </div>
+                <div class="col">
+                    <input class="form-check-input" type="radio" name="news">
+                    <label class="form-check-label" for="news">
+                        да
+                    </label>
+                </div>
+            </div>
+            <hr>
+            <input class="btn btn-primary" type="submit" value="Добавить пользователя">
+            <input class="btn btn-primary" type="reset" value="Очистить форму">
+        </form>
+    </div>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
+</body>
+
+</html>
+
+<!--<!DOCTYPE html>
 <html>
     <head>
         <title>Какой язык программирования выбрать новичку в 2021 году</title>
@@ -128,4 +273,4 @@
             <br>
         </form>
     </body>
-</html>
+</html>-->
